// CV Beton Agung ERP - DB diagram draft
// Source: React prototype features in src/types.ts, src/dummyData.ts,
// src/config/navigation.tsx, and src/features/prototypes/PriorityPrototypeViews.tsx
// Paste this file into https://dbdiagram.io to render the ERD.

Project cv_beton_agung_erp {
  database_type: "PostgreSQL"
  Note: "Draft schema based on current web app prototype features."
}

Enum active_status {
  active
  inactive
}

Enum stock_movement_type {
  in
  out
  adjustment
  transfer
}

Enum product_stock_status {
  safe
  low
  empty
}

Enum quotation_status {
  draft
  sent
  approved
  rejected
}

Enum sales_order_status {
  draft
  processing
  completed
  cancelled
}

Enum invoice_status {
  unpaid
  partial
  paid
  overdue
  cancelled
}

Enum payment_method {
  cash
  transfer
  qris
}

Enum payment_status {
  pending
  verified
  failed
}

Enum purchase_order_status {
  draft
  ordered
  partially_received
  fully_received
  cancelled
}

Enum delivery_status {
  ready_to_load
  shipped
  received
  cancelled
}

Enum return_type {
  customer
  supplier
}

Enum approval_status {
  pending
  approved
  rejected
  cancelled
}

Enum project_status {
  survey
  quotation
  deal
  production
  shipping
  installation
  completed
  cancelled
}

Enum termin_status {
  unpaid
  paid
}

Enum reminder_priority {
  low
  medium
  high
}

Enum employee_type {
  permanent
  contract
  daily
  borongan
}

Table users {
  id uuid [pk]
  role_id uuid [ref: > roles.id]
  name varchar
  email varchar [unique, not null]
  password_hash varchar [not null]
  status active_status [not null, default: "active"]
  last_login_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table roles {
  id uuid [pk]
  code varchar [unique, not null]
  name varchar [unique, not null]
  description text
  created_at timestamp
  updated_at timestamp
}

Table employees {
  id uuid [pk]
  employee_number varchar [unique, not null]
  user_id uuid [ref: > users.id]
  name varchar [not null]
  role_name varchar [not null, note: "tukang/sales/gudang/admin/finance/supervisor"]
  department varchar [not null, note: "workshop/sales/gudang/finance/admin/proyek"]
  phone varchar
  address text
  join_date date
  employee_type employee_type [not null, default: "permanent"]
  daily_rate decimal(18,2) [not null, default: 0]
  piece_rate decimal(18,2) [not null, default: 0]
  status active_status [not null, default: "active"]
  created_at timestamp
  updated_at timestamp
}

Table permissions {
  id uuid [pk]
  module varchar [not null]
  action varchar [not null]
  label varchar
  created_at timestamp

  Indexes {
    (module, action) [unique]
  }
}

Table role_permissions {
  role_id uuid [ref: > roles.id]
  permission_id uuid [ref: > permissions.id]
  access_level varchar [not null, note: "none/read/edit/full"]

  Indexes {
    (role_id, permission_id) [pk]
  }
}

Table customers {
  id uuid [pk]
  code varchar [unique, not null]
  name varchar [not null]
  phone varchar
  email varchar
  city varchar
  address text
  status active_status [not null, default: "active"]
  created_at timestamp
  updated_at timestamp
}

Table suppliers {
  id uuid [pk]
  code varchar [unique, not null]
  name varchar [not null]
  contact_name varchar
  phone varchar
  city varchar
  address text
  status active_status [not null, default: "active"]
  created_at timestamp
  updated_at timestamp
}

Table product_categories {
  id uuid [pk]
  name varchar [unique, not null]
  description text
  status active_status [not null, default: "active"]
  created_at timestamp
  updated_at timestamp
}

Table units {
  id uuid [pk]
  code varchar [unique, not null]
  name varchar [not null]
  created_at timestamp
}

Table products {
  id uuid [pk]
  category_id uuid [ref: > product_categories.id]
  unit_id uuid [ref: > units.id]
  sku varchar [unique, not null]
  name varchar [not null]
  cost_price decimal(18,2) [not null, default: 0]
  selling_price decimal(18,2) [not null, default: 0]
  min_stock decimal(18,2) [not null, default: 0]
  stock_status product_stock_status [not null, default: "safe"]
  qr_value varchar [unique]
  status active_status [not null, default: "active"]
  created_at timestamp
  updated_at timestamp
}

Table warehouses {
  id uuid [pk]
  code varchar [unique, not null]
  name varchar [not null]
  type varchar [note: "warehouse/workshop/raw_material/project_site"]
  address text
  status active_status [not null, default: "active"]
  created_at timestamp
  updated_at timestamp
}

Table storage_locations {
  id uuid [pk]
  warehouse_id uuid [ref: > warehouses.id]
  code varchar [not null]
  name varchar
  description text
  created_at timestamp
  updated_at timestamp

  Indexes {
    (warehouse_id, code) [unique]
  }
}

Table product_stocks {
  product_id uuid [ref: > products.id]
  location_id uuid [ref: > storage_locations.id]
  quantity decimal(18,2) [not null, default: 0]
  updated_at timestamp

  Indexes {
    (product_id, location_id) [pk]
  }
}

Table stock_movements {
  id uuid [pk]
  product_id uuid [ref: > products.id]
  from_location_id uuid [ref: > storage_locations.id]
  to_location_id uuid [ref: > storage_locations.id]
  type stock_movement_type [not null]
  quantity decimal(18,2) [not null]
  reference_type varchar [note: "PO/SO/DO/OPNAME/WO/RETURN/manual"]
  reference_id uuid
  reference_number varchar
  handled_by uuid [ref: > users.id]
  notes text
  movement_at timestamp [not null]
  created_at timestamp
}

Table stock_opname_sessions {
  id uuid [pk]
  opname_number varchar [unique, not null]
  warehouse_id uuid [ref: > warehouses.id]
  started_by uuid [ref: > users.id]
  status varchar [not null, note: "draft/counting/submitted/approved/closed"]
  started_at timestamp
  closed_at timestamp
  notes text
}

Table stock_opname_items {
  id uuid [pk]
  session_id uuid [ref: > stock_opname_sessions.id]
  product_id uuid [ref: > products.id]
  location_id uuid [ref: > storage_locations.id]
  system_qty decimal(18,2) [not null]
  physical_qty decimal(18,2) [not null]
  difference_qty decimal(18,2) [not null]
  notes text
  approval_request_id uuid [ref: > approval_requests.id]

  Indexes {
    (session_id, product_id, location_id) [unique]
  }
}

Table quotations {
  id uuid [pk]
  quotation_number varchar [unique, not null]
  customer_id uuid [ref: > customers.id]
  created_by uuid [ref: > users.id]
  quotation_date date [not null]
  valid_until date
  subtotal decimal(18,2) [not null, default: 0]
  tax_amount decimal(18,2) [not null, default: 0]
  total decimal(18,2) [not null, default: 0]
  status quotation_status [not null, default: "draft"]
  notes text
  created_at timestamp
  updated_at timestamp
}

Table quotation_items {
  id uuid [pk]
  quotation_id uuid [ref: > quotations.id]
  product_id uuid [ref: > products.id]
  description varchar
  quantity decimal(18,2) [not null]
  unit_price decimal(18,2) [not null]
  subtotal decimal(18,2) [not null]
}

Table sales_orders {
  id uuid [pk]
  quotation_id uuid [ref: > quotations.id]
  order_number varchar [unique, not null]
  customer_id uuid [ref: > customers.id]
  order_date date [not null]
  total decimal(18,2) [not null, default: 0]
  status sales_order_status [not null, default: "draft"]
  notes text
  created_at timestamp
  updated_at timestamp
}

Table sales_order_items {
  id uuid [pk]
  sales_order_id uuid [ref: > sales_orders.id]
  product_id uuid [ref: > products.id]
  description varchar
  quantity decimal(18,2) [not null]
  unit_price decimal(18,2) [not null]
  subtotal decimal(18,2) [not null]
}

Table delivery_orders {
  id uuid [pk]
  delivery_number varchar [unique, not null]
  sales_order_id uuid [ref: > sales_orders.id]
  customer_id uuid [ref: > customers.id]
  delivery_date date
  received_at timestamp
  receiver_name varchar
  status delivery_status [not null, default: "ready_to_load"]
  notes text
  created_at timestamp
  updated_at timestamp
}

Table delivery_order_items {
  id uuid [pk]
  delivery_order_id uuid [ref: > delivery_orders.id]
  sales_order_item_id uuid [ref: > sales_order_items.id]
  product_id uuid [ref: > products.id]
  quantity decimal(18,2) [not null]
}

Table invoices {
  id uuid [pk]
  sales_order_id uuid [ref: > sales_orders.id]
  project_id uuid [ref: > projects.id]
  invoice_number varchar [unique, not null]
  customer_id uuid [ref: > customers.id]
  invoice_date date [not null]
  due_date date
  subtotal decimal(18,2) [not null, default: 0]
  tax_amount decimal(18,2) [not null, default: 0]
  total decimal(18,2) [not null, default: 0]
  paid_amount decimal(18,2) [not null, default: 0]
  status invoice_status [not null, default: "unpaid"]
  created_at timestamp
  updated_at timestamp
}

Table invoice_items {
  id uuid [pk]
  invoice_id uuid [ref: > invoices.id]
  product_id uuid [ref: > products.id]
  description varchar
  quantity decimal(18,2) [not null]
  unit_price decimal(18,2) [not null]
  subtotal decimal(18,2) [not null]
}

Table payments {
  id uuid [pk]
  invoice_id uuid [ref: > invoices.id]
  payment_number varchar [unique, not null]
  payment_date timestamp [not null]
  method payment_method [not null]
  amount decimal(18,2) [not null]
  status payment_status [not null, default: "pending"]
  verified_by uuid [ref: > users.id]
  verified_at timestamp
  notes text
  created_at timestamp
}

Table purchase_orders {
  id uuid [pk]
  po_number varchar [unique, not null]
  supplier_id uuid [ref: > suppliers.id]
  po_date date [not null]
  total decimal(18,2) [not null, default: 0]
  status purchase_order_status [not null, default: "draft"]
  notes text
  created_at timestamp
  updated_at timestamp
}

Table purchase_order_items {
  id uuid [pk]
  purchase_order_id uuid [ref: > purchase_orders.id]
  product_id uuid [ref: > products.id]
  description varchar
  quantity decimal(18,2) [not null]
  unit_price decimal(18,2) [not null]
  received_qty decimal(18,2) [not null, default: 0]
  subtotal decimal(18,2) [not null]
}

Table supplier_payables {
  id uuid [pk]
  purchase_order_id uuid [ref: > purchase_orders.id]
  supplier_id uuid [ref: > suppliers.id]
  payable_number varchar [unique, not null]
  due_date date
  amount decimal(18,2) [not null]
  paid_amount decimal(18,2) [not null, default: 0]
  status varchar [not null, note: "open/partial/paid/overdue"]
  created_at timestamp
  updated_at timestamp
}

Table returns {
  id uuid [pk]
  return_number varchar [unique, not null]
  type return_type [not null]
  customer_id uuid [ref: > customers.id]
  supplier_id uuid [ref: > suppliers.id]
  sales_order_id uuid [ref: > sales_orders.id]
  purchase_order_id uuid [ref: > purchase_orders.id]
  reason text [not null]
  qc_status varchar [not null, note: "waiting_qc/approved/rejected/supplier_claim"]
  created_by uuid [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

Table return_items {
  id uuid [pk]
  return_id uuid [ref: > returns.id]
  product_id uuid [ref: > products.id]
  quantity decimal(18,2) [not null]
  notes text
}

Table projects {
  id uuid [pk]
  code varchar [unique, not null]
  customer_id uuid [ref: > customers.id]
  quotation_id uuid [ref: > quotations.id]
  sales_order_id uuid [ref: > sales_orders.id]
  project_name varchar [not null]
  location varchar
  project_type varchar
  project_spec varchar
  contract_value decimal(18,2) [not null, default: 0]
  deadline date
  progress int [not null, default: 0]
  status project_status [not null, default: "survey"]
  created_at timestamp
  updated_at timestamp
}

Table project_timelines {
  id uuid [pk]
  project_id uuid [ref: > projects.id]
  event_date date [not null]
  stage varchar [not null]
  description text
  icon varchar
  created_by uuid [ref: > users.id]
  created_at timestamp
}

Table project_termins {
  id uuid [pk]
  project_id uuid [ref: > projects.id]
  phase varchar [not null]
  amount decimal(18,2) [not null]
  due_date date
  status termin_status [not null, default: "unpaid"]
  invoice_id uuid [ref: > invoices.id]
  paid_at timestamp
}

Table project_documents {
  id uuid [pk]
  project_id uuid [ref: > projects.id]
  title varchar [not null]
  file_url text
  document_date date
  uploaded_by uuid [ref: > users.id]
  created_at timestamp
}

Table project_budget_items {
  id uuid [pk]
  project_id uuid [ref: > projects.id]
  component varchar [not null]
  budget_amount decimal(18,2) [not null, default: 0]
  actual_amount decimal(18,2) [not null, default: 0]
  notes text
  created_at timestamp
  updated_at timestamp
}

Table production_work_orders {
  id uuid [pk]
  work_order_number varchar [unique, not null]
  product_id uuid [ref: > products.id]
  sales_order_id uuid [ref: > sales_orders.id]
  project_id uuid [ref: > projects.id]
  source_label varchar
  stage varchar [not null, note: "draft/cetak/curing/finishing/qc/ready"]
  target_qty decimal(18,2) [not null]
  completed_qty decimal(18,2) [not null, default: 0]
  progress int [not null, default: 0]
  due_date date
  created_at timestamp
  updated_at timestamp
}

Table production_work_order_items {
  id uuid [pk]
  work_order_id uuid [ref: > production_work_orders.id]
  product_id uuid [ref: > products.id]
  quantity decimal(18,2) [not null]
  notes text
}

Table production_work_logs {
  id uuid [pk]
  work_order_id uuid [ref: > production_work_orders.id]
  employee_id uuid [ref: > employees.id]
  work_date date [not null]
  stage varchar [not null, note: "cetak/curing/finishing/qc/packing"]
  made_qty decimal(18,2) [not null, default: 0]
  reject_qty decimal(18,2) [not null, default: 0]
  ok_qty decimal(18,2) [not null, default: 0]
  piece_rate decimal(18,2) [not null, default: 0]
  notes text
  verified_by uuid [ref: > users.id]
  verified_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table boms {
  id uuid [pk]
  product_id uuid [ref: > products.id]
  version varchar [not null]
  effective_from date
  status varchar [not null, note: "draft/active/archived"]
  total_cost decimal(18,2) [not null, default: 0]
  created_at timestamp
  updated_at timestamp

  Indexes {
    (product_id, version) [unique]
  }
}

Table bom_items {
  id uuid [pk]
  bom_id uuid [ref: > boms.id]
  component_product_id uuid [ref: > products.id]
  component_name varchar
  quantity decimal(18,2) [not null]
  unit_id uuid [ref: > units.id]
  unit_cost decimal(18,2) [not null]
  subtotal decimal(18,2) [not null]
}

Table approval_requests {
  id uuid [pk]
  approval_number varchar [unique, not null]
  request_type varchar [not null]
  requester_id uuid [ref: > users.id]
  approver_id uuid [ref: > users.id]
  reference_type varchar
  reference_id uuid
  reference_number varchar
  change_summary text
  amount decimal(18,2)
  status approval_status [not null, default: "pending"]
  requested_at timestamp
  decided_at timestamp
  decision_notes text
}

Table audit_logs {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  role_id uuid [ref: > roles.id]
  action varchar [not null]
  object_type varchar [not null]
  object_id uuid
  object_number varchar
  summary text
  ip_address varchar
  created_at timestamp [not null]
}

Table reminders {
  id uuid [pk]
  type varchar [not null]
  reference_type varchar
  reference_id uuid
  reference_number varchar
  division varchar
  schedule_at timestamp
  priority reminder_priority [not null, default: "medium"]
  status varchar [not null, default: "open", note: "open/done/cancelled"]
  assigned_to uuid [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

Table document_exports {
  id uuid [pk]
  document_type varchar [not null]
  reference_type varchar
  reference_id uuid
  document_number varchar
  export_format varchar [not null, note: "pdf/xlsx/email/print"]
  division varchar
  exported_by uuid [ref: > users.id]
  exported_at timestamp
}

Table company_settings {
  id uuid [pk]
  company_name varchar [not null]
  company_address text
  contact_phone varchar
  operational_email varchar
  tax_rate decimal(5,2) [not null, default: 0]
  backup_schedule varchar
  updated_by uuid [ref: > users.id]
  updated_at timestamp
}
